--- a/RAG-for-Text_to_SQL/.env
+++ b/RAG-for-Text_to_SQL/.env
@@ -1,1 +1,1 @@
-GROQ_API_KEY=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
+GROQ_API_KEY="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"
